updated the ant

--- a/index-js-p5-example.html
+++ b/index-js-p5-example.html
@@ -1,3 +1,11 @@
+<!-- 
+Zhi Zeng
+Email: zengzhi@csu.fullerton.edu 
+Github: ZZ1227
+
+This is the .html file for the webpage program.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,21 +18,21 @@
     <link rel="stylesheet" href="assets/styles.css">
 
     <script src="p5.js"></script> <!-- Load p5.js-->
-    <script src="ant.js"></script>
+    <script src="cs-sketch.js"></script>
 </head>
 
 <body>
     <header class="main-header">
-        <h1 class="logo-text">CPSC335 Cella Lark's Ant - By Team TheBigOs</h1> <!-- Title-->
+        <h1 class="logo-text">CPSC335 Cella Lark's Ant - By Zhi Zeng</h1> <!-- Title-->
     </header>
     <p></p>
     <a>
-        <span>Zhi Zeng, Darcy Hughes, Michael Nguyen, Donghui Feng </span>
+        <span>Cella Lark's Ant </span>
         <p></p>
-        
+
     </a>
 </body>
-<script src="drawGrid.js"></script>
+<script src="assets/draw-stuff.js"></script>
 
 </html>
 
